.gitignore update + tests for qr serving

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 # exclude everything
 static/videos/*
+static/qr_images/*
 
 # exception to the rule
 !static/videos/.gitkeep
+!static/qr_images/.gitkeep
