change of QR generation library

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ setuptools = "*"
 couchdb = "*"
 pytest-mock = "*"
 plupload = "*"
-qrcode = "*"
 pillow = "*"
 pyyaml = "*"
+pyqrcode = "*"
+pypng = "*"
